<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/own1">

    <TextView
        android:id="@+id/bv1tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/hello_check_box_view"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/aman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="92dp"
        android:text="@string/aman" />

    <CheckBox
        android:id="@+id/abhishek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/aman"
        android:layout_marginTop="166dp"
        android:text="@string/abhishek" />

    <CheckBox
        android:id="@+id/raj_sir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/aman"
        android:layout_centerVertical="true"
        android:text="@string/raj_sir" />

    <Button
        android:id="@+id/chkbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="118dp"
        android:background="@color/west_side"
        android:text="@string/check" />

</RelativeLayout>